# special-herbs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: README.md  ROADMAP.md
docs/architecture/: ADR-0001-substrate-as-artifact-contract.md  ADR-0002-separate-repo-from-consumers.md  ADR-0003-training-and-schedule-ownership.md  ADR-template.md  _template.md
docs/design/: lora-and-frontier-model-distribution.md  resilience-and-subsystem-isolation.md  special-herbs-formats-api.md  vol-2-area-4-data-consumption.md
docs/operations/: cross-repo-coordination.md  kg-migration-plan.md
docs/research/: cost-log.md  paper-queue.md  special-herbs-formats-design.md  training-recipe-comparative.md  vol-1-fda-ac-feasibility.md
src/special_herbs/: __init__.py
src/special_herbs/eval/: __init__.py
src/special_herbs/eval/backtest/: __init__.py
src/special_herbs/eval/harness/: __init__.py
src/special_herbs/formats/: __init__.py  hashing.py  manifest.py  verification.py
src/special_herbs/ingest/: __init__.py
src/special_herbs/observability/: __init__.py  assertions.py  event_names.py  events.py
src/special_herbs/plv/: __init__.py
src/special_herbs/release/: __init__.py  builder.py  publisher.py  signer.py
src/special_herbs/tape/: __init__.py  freshness.py  metadata.py
src/special_herbs/training/: __init__.py
tests/: conftest.py  test_smoke.py
tests/fixtures/tape/: README.md
tests/formats/: test_hashing.py  test_manifest.py  test_verification.py
tests/integration/: test_subsystem_boundaries.py  test_tape_freshness.py
tests/observability/: test_assertions.py  test_event_names.py  test_events.py
tests/release/: _fixtures.py  test_builder.py  test_publisher.py  test_signer.py
tests/tape/: test_freshness.py  test_metadata.py
