[project]
name = "special-herbs"
version = "0.0.0"
description = "Research substrate producing versioned LoRA adapters, KG snapshots, and correlation matrices for trading-system consumers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "docs/research/_archive",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
